[metadata]
author = Neizvestnyj
description = C++ std to obj converter for Python
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3
license_file = LICENSE
url = https://github.com/Neizvestnyj/stl-to-obj
keywords = python, c++, cython, std2obj
classifiers = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
              Programming Language :: Python :: 3 :: Only
              Programming Language :: Python :: 3
              Programming Language :: Python :: 3.6
              Programming Language :: Python :: 3.7
              Programming Language :: Python :: 3.8
              Programming Language :: Python :: 3.9
              Programming Language :: Python :: 3.10
              Programming Language :: Python :: 3.11
              Operating System :: OS Independent
              Operating System :: Android
              Operating System :: POSIX :: Linux
              Operating System :: POSIX :: BSD :: FreeBSD
              Operating System :: Microsoft :: Windows
              Operating System :: iOS
              Operating System :: MacOS
              Operating System :: MacOS :: MacOS X
              Environment :: MacOS X
              Environment :: Win32 (MS Windows)
              Environment :: X11 Applications
              Intended Audience :: Developers
              Intended Audience :: End Users/Desktop
              Intended Audience :: Information Technology
              Intended Audience :: Science/Research
              Topic :: Software Development :: User Interfaces
              Topic :: Scientific/Engineering :: Human Machine Interfaces
              Topic :: Scientific/Engineering :: Visualization
